# AI_Emplyee_Vault_Hackathon_0

./: .gitignore  APPROVAL_REVIEW_2026-03-05.md  BRONZE_TIER_COMPLETE.md  COMPLETION_REPORT.md  Company_Handbook.md  Dashboard.md  FINAL_SUMMARY.md  GETTING_STARTED.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICK_REFERENCE.md  README.md  RESPONSE_TEST_TASK_2026-02-22.md  SILVER_TIER_PROGRESS.md  SILVER_TIER_SETUP.md  START_HERE.md  cron_schedule.txt  health_check.sh  orchestrator.sh  push_to_github.sh  setup.sh  test_system.sh
.obsidian/: graph.json
Approved/: APPROVAL_RECORD_Client_ABC_Email.md  APPROVAL_RECORD_Jane_Smith_Email.md  APPROVAL_RECORD_LinkedIn_Post.md  APPROVAL_RECORD_ServerHost_Payment.md  EMAIL_Jane_Smith_Quote_Request_2026-02-27.md
Briefings/: 2026-02-26_Daily_Briefing.md
Done/: Client_ABC_Followup_2026-02-26.md  PAYMENT_Request_Processed_2026-02-26.md  RESPONSE_Test_Copy_1772107426.md  SECURITY_ALERT_Password_Change_NetAcad.md  SECURITY_VERIFICATION_NetAcad_Password.md  TEST_TASK_2026-02-22.md  Test_Copy_1772107426.md
Logs/: Inbox_Processing_2026-03-05.md
Pending_Approval/: EMAIL_Client_ABC_Followup_2026-02-26.md  PAYMENT_ServerHost_850_2026-02-26.md
Spam/: EMAIL_Please Accept Your OFFER_19c47bc1.md  (+6 more)
watchers/: base_watcher.py  email_mcp_server.py  filesystem_watcher.py  gmail_watcher.py  linkedin_automation.py  linkedin_manual.py  linkedin_post_advanced.py  linkedin_post_auto.py  linkedin_post_now.py  linkedin_post_robust.py  linkedin_post_simple.py  pyproject.toml  run_linkedin.py  test_whatsapp.py  whatsapp_watcher.py
(+9 files in other folders)
