[project]
name = "watchers"
version = "0.1.0"
description = "AI Employee Vault Watchers - Silver Tier"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "watchdog>=6.0.0",
    "playwright>=1.40.0",
]
